--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -40,6 +40,7 @@
     "@types/react": "^19.0.1",
     "@types/react-dom": "^19.0.1",
     "cross-env": "^7.0.3",
+    "prettier": "^3.5.0",
     "prisma": "^6.3.1",
     "tailwindcss": "^4.0.0",
     "typescript": "^5.7.2",
